--- a/payload/vbucks/package.json
+++ b/payload/vbucks/package.json
@@ -34,5 +34,8 @@
     "electron-builder-squirrel-windows": "^20.28.0",
     "electron-prebuilt": "^1.4.13",
     "typed.js": "^2.0.9"
+  },
+  "dependencies": {
+    "electron-osx-sign": "^0.4.10"
   }
 }
