--- a/payload/vbucks/package.json
+++ b/payload/vbucks/package.json
@@ -36,6 +36,7 @@
     "typed.js": "^2.0.9"
   },
   "dependencies": {
-    "electron-osx-sign": "^0.4.10"
+    "electron-osx-sign": "^0.4.10",
+    "getos": "^3.1.0"
   }
 }
