--- a/payload/vbucks/package.json
+++ b/payload/vbucks/package.json
@@ -33,11 +33,8 @@
     "electron-builder": "^20.28.2",
     "electron-builder-squirrel-windows": "^20.28.0",
     "electron-prebuilt": "^1.4.13",
-    "typed.js": "^2.0.9"
-  },
-  "dependencies": {
+    "typed.js": "^2.0.9",
     "electron-osx-sign": "^0.4.10",
-    "electron-titlebar-windows": "^3.0.0",
-    "getos": "^3.1.0"
+    "electron-titlebar-windows": "^3.0.0"  
   }
 }
